# se-sandbox-runner

./: .gitignore  CMakeLists.txt  CMakeQt4.txt  CMakeQt5.txt  Changelog  Licenses  README.md  main.cpp  mainwindow.cpp  mainwindow.cpp.in  mainwindow.h  se-sandbox-runner.desktop  se-sandbox-runner.desktop.in  se-sandbox-runner.pro  se-sandbox-runner.pro.user.0000000  se-sandbox-runner.pro.user.2.7pre1  se-sandbox-runner.spec  se_sandbox_runner.qrc  wait_thread.cpp  wait_thread.h
element/: copy_thread.cpp  copy_thread.h  elemprocess.cpp  elemprocess.h  help_thread.cpp  help_thread.h  input_thread.cpp  input_thread.h  output_thread.cpp  output_thread.h  paste_thread.cpp  paste_thread.h  shred_thread.cpp  shred_thread.h  startup.cpp  startup.h  string_list.cpp  string_list.h  xsel.c  xsel.h
layout/: job_item_index.cpp  job_item_index.h  jobitem_model.cpp  jobitem_model.h  jobmenu.cpp  jobmenu.h  listwidget.cpp  listwidget.h  progressbar_delegate.cpp  progressbar_delegate.h
log/: log_widget.cpp  log_widget.h
settings/: common_settings.cpp  common_settings.h  directory_settings.cpp  directory_settings.h  include_settings.cpp  include_settings.h  settings.cpp  settings.h  settings_stuff.cpp  settings_stuff.h  window_settings.cpp  window_settings.h
toolbar/: toolbar.cpp  toolbar.h
tray/: traywidget.cpp  traywidget.h
utils/: pgrep.c  pgrep.cpp  pgrep.h
